# reflectxx

./: .gitignore  CMakeLists.txt  README.md
src/: capture.hpp  define_reflect.hpp  hash.hpp  main.cpp
src/parser/: definition_base.hpp  function_definition.hpp  parser.hpp
src/parser/ast/: bracked_pair.hpp  keyword_token.hpp  token.hpp
